--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head> My first website </head>
   <body>
-    hello I am akshay iam checking if the job is triggering or not
+   Making the new changes
   </body>
 </html>  
   
