--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head> My first website </head>
   <body>
-   Making the new changes
+   Making the new changes for 26th jan
   </body>
 </html>  
   
