--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head> My first website </head>
   <body>
    Making the new changes for 26th january 2022
+    Good afternoon
   </body>
 </html>  
   
